<resources>
    <string name="app_name">TallerUnimagUno</string>
    <string name="login">USUARIO</string>
    <string name="password">PASSWORD</string>
    <string name="ingresar">INGRESAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="matematicas">MATEMATICAS</string>
    <string name="fisica">FISICA</string>
    <string name="estadistica">ESTADISTICA</string>
    <string name="texto">TEXTO</string>
    <string name="numero_uno">NUMERO UNO</string>
    <string name="numero_dos">NUMERO DOS</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrardato">BORRAR DATO</string>
    <string name="suma">SUMA</string>
    <string name="home">Home</string>
    <string name="multiplicacion">MULTIPLICACIÓN</string>
    <string name="potencia">POTENCIA</string>
    <string name="se_ha_iniciado_sesion_como">Se ha iniciado sesion como</string>
    <string name="err_campo_invalido">Se han ingresado campos vacios o valores invalidos</string>
    <string name="shared_pref_login" translatable="false">_shared_pref_login</string>
    <string name="pref_current_user" translatable="false">_pref_current_user</string>
    <string name="pref_current_password" translatable="false">_pref_current_password</string>
    <string name="direccion_infraccion">Direccion de la infraccion</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="email">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="se_ha_cerrado_la_sesion">Se ha cerrado la sesión</string>
    <string name="remember_me">Recuerdame</string>
    <string name="terms_and_conditions">Terminos y condiciones</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="register">Registro</string>
    <string name="firstname">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="genre">Género</string>
    <string name="email_invalid">Correo inválido</string>
    <string name="password_invalid">La contraseña debe tener al menos 6 carácteres</string>
    <string name="verification_code">Código de verificación</string>
    <string name="validate">Validar</string>
    <string name="send_code">Enviar Código</string>
    <string name="code_invalid">El código es inválido</string>
    <string name="code_sended">Un código ha sido enviado al correo electronico ingresado</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="update_password">Reestablecer contraseña</string>
    <string name="password_no_match">Las contraseñas no coinciden</string>
    <string name="fuerza">FUERZA</string>
    <string name="velocidad">VELOCIDAD</string>
    <string name="voltaje">VOLTAJE</string>
    <string name="borrardatos">BORRAR DATOS</string>
    <string name="masa">Masa (Kg)</string>
    <string name="aceleracion">Aceleración (m/s^2)</string>
    <string name="distancia">Distancia (m)</string>
    <string name="tiempo">Tiempo (s)</string>
    <string name="amperaje">Amperaje (I)</string>
    <string name="resistencia1">Resistencia 1 (Ohm)</string>
    <string name="nresistencias">Numero de resistencias</string>
    <string name="resistencia2">Resistencia 2 (Ohm)</string>
    <string name="resistencia3">Resistencia 3 (Ohm)</string>
    <string name="doblepunto">:</string>
    <string name="resistenciasenparalelo">Resistencias en paralelo</string>
    <string name="texto_informativo">Ingrese los 2 puntos del plano cartesiano</string>
    <string name="textox">Eje X</string>
    <string name="textoy">Eje Y</string>
    <string name="calculargeo">Calcular</string>
    <string-array name="opciones">
        <item>Cuadrante</item>
        <item>Pendiente</item>
        <item>Distancia</item>
    </string-array>
</resources>