<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MatematicasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/matematicas"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true"
            android:padding="12dp"
            android:hint="@string/numero_uno"
            android:layout_marginHorizontal="10dp"
            android:inputType="number|numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/edtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true"
            android:hint="@string/numero_dos"
            android:padding="12dp"
            android:layout_marginHorizontal="10dp"
            android:inputType="number|numberDecimal|numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgoperacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbtsuma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/suma" />

            <RadioButton
                android:id="@+id/rbtmulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacion" />

            <RadioButton
                android:id="@+id/rbtpotencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potencia" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btncalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnborrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/borrardato" />
    </LinearLayout>

</LinearLayout>