<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_panel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:maxWidth="150dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_user_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/firstname"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/txtLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_user_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/lastname"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_email_icon"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_lock_icon"

                    android:drawablePadding="10dp"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/txtGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_genre_icon"
                    android:drawableEnd="@drawable/arrow_down"
                    android:drawablePadding="10dp"
                    android:hint="@string/genre"
                    android:inputType="textNoSuggestions"
                    android:focusable="false"
                    android:padding="12dp"
                    />

                <Spinner
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:onClick="onClick"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:onClick="onClick"
                    android:paddingLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:paddingRight="40dp"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>