<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_panel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="10dp"
                    android:maxWidth="200dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/logo" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_email_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/custom_lock_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_password"/>


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <CheckBox android:id="@+id/remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:buttonTint="@color/purple_700"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_700"
                    android:text="@string/terms_and_conditions"
                    android:onClick="onCheckboxClicked"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:onClick="onClick"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/iniciar_sesion"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:onClick="onClick"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>